# blog-wasmtime-serve

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
wit/: world.wit
